--- a/src/blocks/information/__title/information__title.css
+++ b/src/blocks/information/__title/information__title.css
@@ -23,9 +23,10 @@
 
 @media screen and (max-width: 1023px) {
     .information__title{
-        font-size: 22px;
-        letter-spacing: -0.88px;
         margin: 70px 0 0 0;
+    }
+    .information__title:nth-child(n + 3){
+        padding-left: 15px;
     }
 }
 
@@ -39,6 +40,9 @@
         grid-row-start: 2;
         grid-row-end: 3;
 
+    }
+    .information__title:nth-child(n + 3){
+        padding-left: 0;
     }
     .information__title:last-of-type{
         grid-column-start: 1;
