--- a/src/blocks/movies/__image-card/movies__image-card.css
+++ b/src/blocks/movies/__image-card/movies__image-card.css
@@ -1,6 +1,7 @@
 .movies__image-card{
     object-fit: cover;
     max-height: 201px;
+    max-width: 360px;
     margin-bottom: 14px;
     cursor: pointer;
 }
