--- a/src/blocks/profile/__input/profile__input-name.css
+++ b/src/blocks/profile/__input/profile__input-name.css
@@ -12,5 +12,6 @@
     height: 14px;
     flex-shrink: 0;
     padding: 0;
-    margin-bottom: 16px;
+    padding-bottom: 16px;
+    border-bottom: 1px solid #424242;
 }
