--- a/src/blocks/profile/__title-form/profile__title-form.css
+++ b/src/blocks/profile/__title-form/profile__title-form.css
@@ -10,7 +10,8 @@
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 2;
-    margin-bottom: 16px;
+    padding-bottom: 16px;
+    border-bottom: 1px solid #424242;
 }
 
 @media screen and (max-width: 767px) {
