--- a/src/blocks/profile/proflie.css
+++ b/src/blocks/profile/proflie.css
@@ -1,6 +1,6 @@
 .profile{
     max-width: 1140px;
-    margin: 0 auto;
+    margin: 0 70px;
     display: flex;
     flex-direction: column;
 }
@@ -8,6 +8,7 @@
 @media screen and (max-width: 1023px) {
     .profile{
         max-width: 768px ;
+        margin: 0 auto;
 
     }
     
