--- a/src/blocks/footer/__github-block/footer__github-block.css
+++ b/src/blocks/footer/__github-block/footer__github-block.css
@@ -6,13 +6,17 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  position: absolute;
-  right: 0;
   text-transform: none;
   text-decoration: none;
   color: white;
   margin: 20px 0;
   transition: opacity 0.2s linear;
+}
+
+.footer__github-block a{
+  text-transform: none;
+  text-decoration: none;
+  color: white;
 }
 
 .footer__github-block:hover {
