--- a/src/blocks/footer/__yandex-block/footer__yandex-block.css
+++ b/src/blocks/footer/__yandex-block/footer__yandex-block.css
@@ -6,18 +6,19 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    position: absolute;
-    right: 62px;
     margin: 20px 0;
+    margin-left: auto;
+    margin-right: 20px;
 }
 
 @media screen and (max-width: 767px) {
     .footer__yandex-block{
         font-size: 12px;
+        margin: 0;
         margin-top: 30px;
         margin-bottom: 12px;
-        position: unset;
         text-align: center;
+        order: 1;
     }
     
 }
