--- a/src/blocks/form/__input/form__input.css
+++ b/src/blocks/form/__input/form__input.css
@@ -1,5 +1,5 @@
 .form__input{
-    width: 1080px;
+    width: calc(100% - 44px - 10px);
     height: 50px;
     flex-shrink: 0;
     border-radius: 8px;
