--- a/src/blocks/form/form.css
+++ b/src/blocks/form/form.css
@@ -1,12 +1,23 @@
 .form{
-    max-width: 1280px;
+    max-width: 1140px;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     margin-top: 80px;
+    margin-bottom: 40px;
+}
+
+@media screen and (max-width: 1023px) {
+    .form{
+        margin: 80px auto 40px auto;
+    }
+    
 }
 
 @media screen and (max-width: 767px) {
     .form{
+        margin: 80px auto 40px auto;
     }
     
 }
