--- a/src/blocks/header/__title/header__title.css
+++ b/src/blocks/header/__title/header__title.css
@@ -5,22 +5,21 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  margin: 148px auto 40px auto;
+  margin: 40px auto 0 auto;
   width: 396px;
   text-align: left;
 }
 
 @media screen and (max-width: 1023px) {
   .header__title {
-    margin-top: 310px;
+    margin-top: 40px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .register .header__title {
+  .header__title {
     margin-top: 50px;
     text-align: center;
-    margin-bottom: 80px;
     max-width: 260px;
   }
 }
