--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,5 +1,5 @@
 .header {
-  max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
   height: 74px;
   display: flex;
@@ -8,6 +8,9 @@
   align-items: center;
 }
 
+.header__navigation{
+  display:contents;
+}
 .header.register {
   height: 217px;
 }
@@ -17,6 +20,7 @@
     max-width: 768px;
   }
   .header.register {
+
     height: 379px;
     max-width: 768px;
   }
@@ -27,10 +31,9 @@
     max-width: 320px;
   }
 
-  .register.header {
+  .header.register {
     height: 253px;
     max-width: 320px;
-    flex-direction: column;
     justify-content: center;
   }
 }
