--- a/src/blocks/movies/__title-card/movies__title-card.css
+++ b/src/blocks/movies/__title-card/movies__title-card.css
@@ -5,7 +5,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    width: 250px;
+    max-width: 250px;
     margin: 0;
     margin-left: 14px;
     max-height: 16px;
