--- a/src/blocks/register/__block/register__block.css
+++ b/src/blocks/register/__block/register__block.css
@@ -7,11 +7,16 @@
     align-items: center;
 }
 
+.register__block.login{
+    margin: 178px auto 70px auto;
+}
+
 @media screen and (max-width: 1023px) {
     .register__block{
         margin-bottom: 232px;
         max-width: 768px;
     }
+    
     
 }
 
@@ -20,6 +25,9 @@
         margin-bottom: 30px;
         margin-top: 156px;
         max-width: 320px;
+    }
+    .register__block.login{
+        margin-top: 266px;
     }
     
 }
