--- a/src/blocks/header-register/__block/header-register__block.css
+++ b/src/blocks/header-register/__block/header-register__block.css
@@ -1,18 +1,15 @@
-.header__block{
+.header-register__block{
     max-width: 396px;
     margin: 0 auto;
     position: relative;
     display: flex;
     align-items: flex-end;
     margin-bottom: 40px;
-}
-
-.register .header__block{
     flex-direction: column;
 }
 
 @media screen and (max-width: 767px) {
-    .header__block {
+    .header-register__block {
       max-width: 260px;
       margin-bottom: 80px;
       justify-content: end;
