--- a/src/blocks/header/__movies-button/header__movies-button.css
+++ b/src/blocks/header/__movies-button/header__movies-button.css
@@ -19,16 +19,13 @@
 }
 
 .header__movies-button:nth-child(n + 4) {
-  margin-right: 364px;
+  margin-right: auto;
 }
 
-@media screen and (max-width: 1023px) {
+
+@media screen and (max-width: 768px) {
   .header__movies-button {
     display: none;
   }
 }
 
-@media screen and (max-width: 767px) {
-  .header__movies-button {
-  }
-}
