--- a/src/blocks/register/register.css
+++ b/src/blocks/register/register.css
@@ -2,3 +2,17 @@
     max-width: 1280px;
     margin: 0 auto;
 }
+
+@media screen and (max-width: 1023px) {
+    .register{
+        max-width: 768px;
+    }
+    
+}
+
+@media screen and (max-width: 767px) {
+    .register{
+        max-width: 320px;
+    }
+    
+}
