--- a/src/blocks/content/__about/content__about.css
+++ b/src/blocks/content/__about/content__about.css
@@ -2,6 +2,8 @@
     max-width: 1200px;
     max-height: 493px;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
     border-radius: 10px;
     background: #272727;
@@ -11,10 +13,9 @@
 
 @media screen and (max-width: 1023px) {
     .content__about{
-        max-width: 728px;
         max-height: 834px;
-        margin-right: auto ;
-        margin-left: auto;
+        margin-right: 20px ;
+        margin-left: 20px;
     }
     
 }
@@ -22,10 +23,9 @@
 @media screen and (max-width: 767px) {
     .content__about{
         margin-top: 14px;
-        max-width: 292px;
         max-height: 586px;
-        margin-right: auto ;
-        margin-left: auto;
+        margin-right: 14px ;
+        margin-left: 14px;
     }
     
 }
