--- a/src/blocks/error/__button/error__button.css
+++ b/src/blocks/error/__button/error__button.css
@@ -12,6 +12,7 @@
     margin-top: 184px;
     margin-bottom: 60px;
     transition: opacity .2s linear;
+    cursor: pointer;
 }
 
 .error__button:hover{
