--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,21 +1,19 @@
 .footer{
-    width: 100%;
-    margin: 0;
+    max-width: 1280px;
+    margin: 0 70px;
 }
 
 @media screen and (max-width: 1023px) {
     .footer{
-        max-width: 708px;
-        margin: 0 auto;
+        margin: 0 30px;
     }
     
 }
 
 @media screen and (max-width: 767px) {
     .footer{
-        max-width: 300px;
         height: 253px;
-        margin: 0 auto;
+        margin: 0 10px;
     }
     
 }
