--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -6,7 +6,10 @@ body {
 }
 
 .page {
-  max-width: 100%;
+  min-width: 320px;
+  max-width: 1280px;
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
   background-color: #202020;
   margin: 0 auto;
