--- a/src/index.css
+++ b/src/index.css
@@ -101,4 +101,5 @@
 @import url(./blocks/header-register/__image/header-register__image.css);
 @import url(./blocks/all/all.css);
 @import url(./blocks/search-form/__block/search-from__block.css);
+@import url(./blocks/saved/saved.css);
 
