--- a/src/blocks/filter/filter.css
+++ b/src/blocks/filter/filter.css
@@ -3,18 +3,19 @@
     justify-content: center;
     align-items: center;
     margin-top: 29px;
+    margin: 29px auto 0 auto;
 }
 
 @media screen and (max-width: 1023px) {
     .filter{
-        margin-top: 41px;
+        margin: 41px auto 0 auto;
     }
     
 }
 
 @media screen and (max-width: 767px) {
     .filter{
-        margin-top: 47px;
+        margin: 47px auto 0 auto;
     }
     
 }
