--- a/src/blocks/footer/__block/footer__block.css
+++ b/src/blocks/footer/__block/footer__block.css
@@ -1,23 +1,22 @@
 .footer__block{
     display: flex;
     max-width: 1140px;
-    margin: 0 70px;
+    margin: 0;
     color: white;
-    position: relative;
     list-style-type: none ;
     padding: 0;
 }
 
 @media screen and (max-width: 1023px) {
     .footer__block{
-        margin: 0 auto;
+        margin: 0;
     }
     
 }
 
 @media screen and (max-width: 767px) {
     .footer__block{
-        margin: 0 auto;
+        margin: 0;
         flex-direction: column-reverse;
     }
     
