--- a/src/blocks/footer/__title/footer__title.css
+++ b/src/blocks/footer/__title/footer__title.css
@@ -9,13 +9,12 @@
     line-height: normal;
     max-width: 1140px;
     border-bottom: 1px solid #424242;
-    padding: 79px 0 20px 0;
-    margin: 0 70px;
+    padding: 79px 70px 20px 70px;
+    margin: 0;
 }
 
 @media screen and (max-width: 1023px) {
     .footer__title{
-        margin: 0 auto;
     }
     
 }
@@ -23,7 +22,6 @@
 @media screen and (max-width: 767px) {
     .footer__title{
         font-size: 12px;
-        margin: 0;
     }
     
 }
