--- a/src/blocks/footer/__yandex-block/footer__yandex-block.css
+++ b/src/blocks/footer/__yandex-block/footer__yandex-block.css
@@ -1,24 +1,34 @@
-.footer__yandex-block{
-    text-align: right;
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-family: Inter;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin: 20px 0;
-    margin-left: auto;
-    margin-right: 20px;
+.footer__yandex-block {
+  text-align: right;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Inter;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: 20px 0;
+  margin-left: auto;
+  margin-right: 20px;
+  transition: opacity 0.2s linear;
 }
 
+.footer__yandex-block:hover{
+    opacity: .8;
+}
+
+.footer__yandex-block a{
+    text-transform: none;
+    text-decoration: none;
+    color: white;
+  }
+
 @media screen and (max-width: 767px) {
-    .footer__yandex-block{
-        font-size: 12px;
-        margin: 0;
-        margin-top: 30px;
-        margin-bottom: 12px;
-        text-align: center;
-        order: 1;
-    }
-    
+  .footer__yandex-block {
+    font-size: 12px;
+    margin: 0;
+    margin-top: 30px;
+    margin-bottom: 12px;
+    text-align: center;
+    order: 1;
+  }
 }
