--- a/src/blocks/form/__button/form__button.css
+++ b/src/blocks/form/__button/form__button.css
@@ -1,5 +1,4 @@
 .form__button{
-    background-color: none;
     background-color: transparent;
     border: 0;
     padding: 0;
@@ -7,6 +6,12 @@
     cursor: pointer;
     align-self: center;
     max-height: 44px;
+    transition: opacity 0.2s linear;
+    cursor: pointer;
+}
+
+.form__button:hover{
+    opacity: .8;
 }
 
 @media screen and (max-width: 767px) {
