--- a/src/blocks/form/form.css
+++ b/src/blocks/form/form.css
@@ -1,23 +1,28 @@
 .form{
-    max-width: 1140px;
-    margin: 0 auto;
+    width: 100%;
+    margin: 0;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
+    flex-direction: column;
     margin-top: 80px;
     margin-bottom: 40px;
+    
+}
+
+.form__block{
+    display: flex;
 }
 
 @media screen and (max-width: 1023px) {
     .form{
-        margin: 80px auto 40px auto;
+        margin: 80px 0 40px 0;
     }
     
 }
 
 @media screen and (max-width: 767px) {
     .form{
-        margin: 80px auto 40px auto;
+        margin: 80px 0 40px 0;
     }
     
 }
