--- a/src/blocks/header/__image/header__image.css
+++ b/src/blocks/header/__image/header__image.css
@@ -1,6 +1,7 @@
 .header__image {
+  width: 100px;
+  height: 38px;
   margin-right: auto;
-  margin-left: 70px;
 }
 
 .header__block .header__image {
@@ -10,7 +11,7 @@
 
 @media screen and (max-width: 1023px) {
   .header__image {
-    margin-left: 30px;
+    
   }
   .header__block .header__image {
     margin-top: 232px;
@@ -19,7 +20,6 @@
 
 @media screen and (max-width: 767px) {
   .header__image {
-    margin-left: 14px;
   }
   .header__block .header__image {
     margin-top: 56px;
