--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
-  width: 100%;
-  margin: 0 auto;
+  max-width: 1280px;
+  margin: 0 70px;
   height: 74px;
   display: flex;
   align-items: center;
@@ -10,9 +10,23 @@
   display:contents;
 }
 
+@media screen and (max-width: 1023px) {
+  .header {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    margin-left: 14px;
+    margin-right: 14px;
+  }
+}
 
 @media screen and (max-width: 320px) {
   .header {
+
     max-width: 320px;
   }
 }
