--- a/src/blocks/portfolio/__image-url/portfolio__image-url.css
+++ b/src/blocks/portfolio/__image-url/portfolio__image-url.css
@@ -2,6 +2,7 @@
     padding-top: 15px;
     cursor: pointer;
     transition: opacity .2s linear;
+    width: 29px;
 }
 
 .portfolio__image-url:hover{
@@ -11,6 +12,7 @@
 @media screen and (max-width: 1023px) {
     .portfolio__image-url{
         padding-top: 20px;
+        width: 27px;
     }
     
 }
@@ -18,6 +20,7 @@
 @media screen and (max-width: 767px) {
     .portfolio__image-url{
         padding-top: 5px;
+        width: 18px;
     }
     
 }
