--- a/src/blocks/portfolio/portfolio.css
+++ b/src/blocks/portfolio/portfolio.css
@@ -6,16 +6,14 @@
 
 @media screen and (max-width: 1023px) {
     .portfolio{
-        max-width: 668px;
-        margin: 90px auto 0 auto;
+        margin: 90px 50px 0 50px;
     }
     
 }
 
 @media screen and (max-width: 767px) {
     .portfolio{
-        max-width: 292px;
-        margin: 70px auto 0 auto;
+        margin: 70px 14px 0 14px;
     }
     
 }
