--- a/src/blocks/search-form/search-form.css
+++ b/src/blocks/search-form/search-form.css
@@ -1,22 +1,15 @@
 .search-form{
-    width: 100%;
-    margin: 0 auto 11px auto;
+    margin: 0 0 11px 0;
 }
 
 @media screen and (max-width: 1023px) {
     .search-form{
-        max-width: 768px;
-        margin-right: auto;
-        margin-left: auto;
     }
     
 }
 
 @media screen and (max-width: 767px) {
     .search-form{
-        max-width: 320px;
-        margin-right: auto;
-        margin-left: auto;
     }
     
 }
