--- a/src/blocks/technology/__block/technology__block.css
+++ b/src/blocks/technology/__block/technology__block.css
@@ -5,8 +5,14 @@
 
 @media screen and (max-width: 1023px) {
     .technology__block{
-        max-width: 668px;
-        margin: 0 auto;
+        margin: 0 50px;
+    }
+    
+}
+
+@media screen and (max-width: 767px) {
+    .technology__block{
+        margin: 0 18px;
     }
     
 }
