--- a/src/blocks/technology/__subtitle/technology__subtitle.css
+++ b/src/blocks/technology/__subtitle/technology__subtitle.css
@@ -6,8 +6,7 @@
     font-weight: 400;
     line-height: 20px; /* 142.857% */
     letter-spacing: -0.56px;
-    max-width: 460px;
-    margin: 26px auto 0 auto;
+    margin: 26px 340px 0 340px;
 }
 
 @media screen and (max-width: 1023px) {
@@ -15,7 +14,8 @@
         font-size: 12px;
         line-height: 18px;
         letter-spacing: -0.48px;
-        margin-top: 22px;
+        max-height: 36px;
+        margin: 22px 104px 0 104px;
     }
 }
 
@@ -25,5 +25,6 @@
         line-height: 16px;
         letter-spacing: -0.44px;
         margin-top: 24px;
+        margin: 24px -4px;
     }
 }
