--- a/src/blocks/technology/__title/technology__title.css
+++ b/src/blocks/technology/__title/technology__title.css
@@ -5,13 +5,12 @@
     font-weight: 400;
     line-height: 58px; /* 116% */
     letter-spacing: -2px;
-    max-width: 730px;
-    margin: 90px auto 0 auto;
+    margin: 90px 270px 0 270px;
 }
 
 @media screen and (max-width: 1023px) {
     .technology__title{
-        margin-top: 80px;
+        margin: 80px 34px 0 34px;
     }
     
 }
@@ -19,6 +18,7 @@
 @media screen and (max-width: 767px) {
     .technology__title{
         margin-top: 60px;
+        margin: 60px -4px;
         font-size: 30px;
         line-height: normal;
         letter-spacing: -1.2px;
