last update level-2

--- a/src/blocks/button/button.css
+++ b/src/blocks/button/button.css
@@ -22,6 +22,11 @@
   transition: opacity 0.2s linear;
 }
 
+.button a{
+  text-decoration: none;
+  color: white;
+}
+
 .button:hover {
   opacity: 0.8;
 }
