--- a/src/blocks/movies/movies.css
+++ b/src/blocks/movies/movies.css
@@ -3,6 +3,7 @@
     margin: 70px 70px 0 70px;
     display: grid;
     grid-template-columns: repeat(auto-fill, 360px);
+    grid-template-rows: repeat(4, 1fr);
     column-gap: 30px;
     row-gap: 58px;
     list-style-type: none ;
