--- a/src/blocks/movies/__image-card/movies__image-card.css
+++ b/src/blocks/movies/__image-card/movies__image-card.css
@@ -1,16 +1,16 @@
 .movies__image-card{
     object-fit: cover;
-    max-height: 201px;
-    max-width: 360px;
+    height: 201px;
+    width: 100%;
     margin-bottom: 14px;
     cursor: pointer;
 }
 
-.all .movies__image-card:hover ~ .movies__card-button{
+.all .movies__image-card:hover ~ .movies__button-card{
     visibility: visible;
 }
 
-.saved .movies__image-card:hover ~ .movies__card-button_delete{
+.saved .movies__image-card:hover ~ .movies__button-card_delete{
     visibility: visible;
 }
 
