add registration authorization editProfile savedMovie

--- a/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -13,6 +13,8 @@
     padding: 0;
     cursor: pointer;
     transition: opacity .2s linear;
+    grid-column-start: 1;
+    grid-column-end: 3;
 }
 
 .profile__edit-button:hover{
