--- a/src/index.css
+++ b/src/index.css
@@ -102,4 +102,4 @@
 @import url(./blocks/all/all.css);
 @import url(./blocks/search-form/__block/search-from__block.css);
 @import url(./blocks/saved/saved.css);
-
+@import url(./blocks/profile/__edit-button/_disabled/profile__edit-button_disabled.css);
