--- a/src/blocks/movies/__button-card/_delete/movies__button-card_delete.css
+++ b/src/blocks/movies/__button-card/_delete/movies__button-card_delete.css
@@ -16,7 +16,11 @@
     .movies__button-card_delete{
         top: 10px;
         right: 10px;
+        visibility: visible;
 
+    }
+    .saved .movies__button-card_delete:hover{
+        opacity: 0.8;
     }
     
 }
