--- a/src/blocks/movies/__button-card/_ok/movies__button-card_ok.css
+++ b/src/blocks/movies/__button-card/_ok/movies__button-card_ok.css
@@ -6,6 +6,10 @@
     transition: opacity .2s linear;
 }
 
+.movies__button-card_ok:hover{
+    opacity: .8;
+}
+
 @media screen and (max-width: 767px) {
     .movies__button-card_ok{
         top: 10px;
